# commun

tp-3-generation-main 3/: .gitignore  README.md
tp-3-generation-main 3/docs/: README.org  README.php
tp-3-generation-main 3/sc_minilib-main/: .gitignore   CMakeLists.txt  README.md
tp-3-generation-main 3/sc_minilib-main/examples/: CMakeLists.txt
tp-3-generation-main 3/sc_minilib-main/examples/ac/: CMakeLists.txt  ac.cpp
tp-3-generation-main 3/sc_minilib-main/examples/coffee/: coffee.cpp
tp-3-generation-main 3/sc_minilib-main/examples/fan/: fan.cpp
tp-3-generation-main 3/sc_minilib-main/srcs/: display.cpp  display.h  sm_defs.cpp  sm_defs.h  state_chart.cpp  state_chart.hpp  transition.cpp  transition.hpp
